--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+  <div class="container">
+    <!-- topics bar -->
+    <div class="row">
+      <div class="col-md-12">
+        <div id="topicBar"></div>
+      </div>
+    </div>
+    <!-- content  -->
+    <div class="row">
+      <!-- gif gallery -->
+      <div class="col-md-8">
+        <div id="gifGallery"></div>
+      </div>
+      <!-- topic adder -->
+      <div class="col-md-4">
 
+      </div>
+    </div>
+  </div>
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
