fixed clipping issue again and situation where rating gets removed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       </div>
       <!-- topic adder -->
       <div class="col-md-4">
-
+        <form id= "newTopicForm" action="submit">
+          <input id="newTopics" type="text" placeholder="Insert topic here.">
+        </form>
       </div>
     </div>
   </div>
