added better ux and implemented the more button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <form id= "newTopicForm" action="submit">
           <input id="newTopics" type="text" placeholder="Insert topic here.">
         </form>
+        <button id="requestMore">More?</button>
       </div>
     </div>
   </div>
