added modal overlay

--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa|Jua" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
   <div class="container">
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-body">
+            <div id="modalGif"></div>
+          </div>
+        </div>
+
+      </div>
+    </div>
     <!-- topics bar -->
     <div class="row">
       <div class="col-md-12">
@@ -36,6 +49,7 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script src = "assets/javascript/app.js"></script>
 </body>
 </html>
