added localStorage funtionality

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <div class="col-md-4">
         <form id= "newTopicForm" action="submit">
           <input id="newTopics" type="text" placeholder="Insert topic here.">
+          <div><input class="inputButton" type="submit" value="Search"></div>
         </form>
         <button id="requestMore">More?</button>
       </div>
