added a bit more styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
           <input id="newTopics" type="text" placeholder="Insert topic here.">
           <div><input class="inputButton" type="submit" value="Search"></div>
         </form>
-        <button id="requestMore">More?</button>
+        <div id="more">
+          <button id="requestMore">More?</button>
+        </div>
       </div>
     </div>
   </div>
